# Data-Pipeline-US-Bonds-Commodities

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.specstory/: .project.json
config/: companies.yaml
dags/: sec_pipeline_dag.py
extraction/: edgar_client.py  lineage.py
normalisation/: concept_mapping.py  llm_normaliser.py
notebooks/: example.ipynb
schema/: init.sql
transformation/: load.py  transform.py
validation/: validate_metrics.py  validate_quality.py
