[project]
name = "a-data-pipeline-for-sec-edgar-fianancials-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.30.0",
    "edgartools>=5.0.0",
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
]
